correction des flag attention